--- a/index.html
+++ b/index.html
@@ -707,10 +707,10 @@
 
 <!-- Website JS -->
 <script src="assets/js/jquery.js"></script>
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <!-- Slick Carousel JS-->
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <!-- Custom JS -->
 <script src="assets/js/main.js"></script>
 <!-- AOS JS -->
