--- a/about-us.html
+++ b/about-us.html
@@ -16,11 +16,11 @@
 <!-- AOS Animation -->
 <link rel="stylesheet" href="assets/css/aos.css" />
 <!-- Slick Carousel -->
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 
 
@@ -476,10 +476,10 @@
 
 <!-- Website JS -->
 <script src="assets/js/jquery.js"></script>
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <!-- Slick Carousel JS-->
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <!-- Custom JS -->
 <script src="assets/js/main.js"></script>
 <!-- AOS JS -->
