--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav me-5">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index-2.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="about-us.html">About
