--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark stroke bg-transparent">
         <div class="container">
-            <a class="navbar-brand m-0" href="index-2.html">
+            <a class="navbar-brand m-0" href="index.html">
                 <img src="assets/images/logo.svg" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
