--- a/seo.html
+++ b/seo.html
@@ -16,11 +16,11 @@
 <!-- AOS Animation -->
 <link rel="stylesheet" href="assets/css/aos.css" />
 <!-- Slick Carousel -->
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 
 
@@ -31,7 +31,7 @@
     <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark stroke bg-transparent">
         <div class="container">
-            <a class="navbar-brand m-0" href="index-2.html">
+            <a class="navbar-brand m-0" href="index.html">
                 <img src="assets/images/logo.svg" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav me-5">
                     <li class="nav-item">
-                        <a class="nav-link " href="index-2.html">Home</a>
+                        <a class="nav-link " href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="about-us.html">About
@@ -560,10 +560,10 @@
 
 <!-- Website JS -->
 <script src="assets/js/jquery.js"></script>
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <!-- Slick Carousel JS-->
-<script src="../../../../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <!-- Custom JS -->
 <script src="assets/js/main.js"></script>
 <!-- AOS JS -->
