--- a/about-us.html
+++ b/about-us.html
@@ -189,7 +189,7 @@
     <!-- End section -->
 
     <!-- sec 1 -->
-    <section class="sec-1">
+    <section class="sec-1 d-xl-block d-none">
     <div class="container">
         <div class="row align-items-center">
             <div class="sec-body">
