--- a/about-us.html
+++ b/about-us.html
@@ -499,10 +499,10 @@ AOS.init({
     <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-                <a class="nav-link " href="index-2.html">Home</a>
+                <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">About
+                <a class="nav-link active" href="about-us.html">About
                     Us</a>
             </li>
             <li class="nav-item dropdown">
