--- a/contact-us.html
+++ b/contact-us.html
@@ -382,10 +382,10 @@ AOS.init({
     <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-                <a class="nav-link " href="index-2.html">Home</a>
+                <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#">About
+                <a class="nav-link " href="about-us">About
                     Us</a>
             </li>
             <li class="nav-item dropdown">
