--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -189,7 +189,7 @@
     <!-- End section -->
 
     <!-- sec 1 -->
-    <section class="sec-1">
+    <section class="sec-1 d-xl-block d-none">
     <div class="container">
         <div class="row align-items-center">
             <div class="sec-body">
@@ -586,7 +586,7 @@ AOS.init({
                 <a class="nav-link " href="index-2.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#">About
+                <a class="nav-link " href="about-us.html">About
                     Us</a>
             </li>
             <li class="nav-item dropdown">
