--- a/contact-us.html
+++ b/contact-us.html
@@ -385,7 +385,7 @@ AOS.init({
                 <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="about-us">About
+                <a class="nav-link " href="about-us.html">About
                     Us</a>
             </li>
             <li class="nav-item dropdown">
