--- a/our-portfolio.html
+++ b/our-portfolio.html
@@ -189,7 +189,7 @@
     <!-- End section -->
 
     <!-- sec 1 -->
-    <section class="sec-1">
+    <section class="sec-1 d-xl-block d-none">
     <div class="container">
         <div class="row align-items-center">
             <div class="sec-body">
@@ -488,10 +488,10 @@ AOS.init({
     <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-                <a class="nav-link " href="index-2.html">Home</a>
+                <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#">About
+                <a class="nav-link " href="about-us.html">About
                     Us</a>
             </li>
             <li class="nav-item dropdown">
